--- a/src/sass/base/_custom-props.scss
+++ b/src/sass/base/_custom-props.scss
@@ -1,1 +1,24 @@
-@use '../abstracts/' as *;
+@use "sass:color";
+@use "../abstracts/" as *;
+
+// For some reason, whenever you edit this, I need to restart the server to see it got generated in sytle.css properly
+:root {
+  @each $name, $value in $colors {
+    --#{$name}: #{$value};
+  }
+}
+
+/*
+the above will create:
+:root {
+  --green: hsl(123deg, 47%, 74%);
+  --blue: hsl(210deg, 47%, 74%);
+  --orange: hsl(34deg, 93%, 77%);
+  --purple: hsl(231deg, 44%, 76%);
+  --yellow: hsl(54deg, 76%, 79%);
+  --brown: hsl(20deg, 41%, 69%);
+  --red: hsl(0deg, 59%, 76%);
+  --pink: hsl(295deg, 42%, 72%);
+  --white: hsl(0deg, 0%, 100%);
+}
+*/
