--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,6 +82,7 @@ the above will create:
 }
 */
 body {
+  font-family: system-ui;
   display: grid;
   min-height: 100vh;
   place-content: center;
@@ -105,6 +106,10 @@ body {
 .orbit li {
   opacity: 0;
   position: absolute;
+  background: var(--orange-light);
+  width: 10rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
 }
 .orbit li:first-child {
   opacity: 1;
