--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -1,5 +1,6 @@
 // demo only
 body {
+  font-family: system-ui;
   display: grid;
   min-height: 100vh;
   place-content: center;
@@ -28,6 +29,10 @@ body {
   li {
     opacity: 0;
     position: absolute;
+    background: var(--orange-light);
+    width: 10rem;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
   }
 
   li:first-child {
