--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,7 +89,7 @@ body {
 }
 
 .orbit .center-image {
-  width: 10rem;
+  width: 12rem;
   position: relative;
 }
 .orbit .center-image img {
@@ -107,9 +107,17 @@ body {
   opacity: 0;
   position: absolute;
   background: var(--orange-light);
-  width: 10rem;
+  width: 8rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
+  text-align: center;
+  line-height: 1;
+}
+.orbit li > * {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .orbit li:first-child {
   opacity: 1;
