--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -8,7 +8,7 @@ body {
 
 .orbit {
   .center-image {
-    width: 10rem;
+    width: 12rem;
     position: relative;
 
     img {
@@ -30,9 +30,18 @@ body {
     opacity: 0;
     position: absolute;
     background: var(--orange-light);
-    width: 10rem;
+    width: 8rem;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
+    text-align: center;
+    line-height: 1;
+
+    & > * {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   li:first-child {
