--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,9 @@ body {
   width: 8rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
+  overflow: hidden;
+  font-weight: 500;
+  color: var(--white-light);
   text-align: center;
   line-height: 1;
 }
@@ -118,6 +121,13 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.orbit li p {
+  background: var(--orange-dark);
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
 .orbit li:first-child {
   opacity: 1;
