--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -33,6 +33,9 @@ body {
     width: 8rem;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
+    overflow: hidden;
+    font-weight: 500;
+    color: var(--white-light);
     text-align: center;
     line-height: 1;
 
@@ -41,6 +44,14 @@ body {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+
+    p {
+      background: var(--orange-dark);
+      width: 100%;
+      height: 100%;
+      display: grid;
+      place-items: center;
     }
   }
 
