--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,12 +122,18 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.orbit li p {
+.orbit li > p {
   background: var(--orange-dark);
   width: 100%;
   height: 100%;
   display: grid;
   place-items: center;
+  transition: opacity 500ms;
+  opacity: 0;
+}
+.orbit li:hover > p {
+  opacity: 1;
+  cursor: pointer;
 }
 .orbit li:first-child {
   opacity: 1;
