--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -46,12 +46,19 @@ body {
       transform: translate(-50%, -50%);
     }
 
-    p {
+    > p {
       background: var(--orange-dark);
       width: 100%;
       height: 100%;
       display: grid;
       place-items: center;
+      transition: opacity 500ms;
+      opacity: 0;
+    }
+
+    &:hover > p {
+      opacity: 1;
+      cursor: pointer;
     }
   }
 
