!!!!! keep the center of the .center-image the same, move the image so you don't need to move every small circle

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,7 @@ body {
 .orbit .center-image {
   width: 12rem;
   position: relative;
+  transform: translate(-2rem, -2rem);
 }
 .orbit .center-image img {
   position: absolute;
