--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -10,6 +10,8 @@ body {
   .center-image {
     width: 12rem;
     position: relative;
+    // keep the center of the .center-image the same, move the image so you don't need to move every small circle
+    transform: translate(-2rem, -2rem);
 
     img {
       position: absolute;
