--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,8 +105,10 @@ body {
   list-style: none;
 }
 .orbit li {
+  --icon-bg: pink;
+  --text-bg: blue;
+  background: var(--icon-bg);
   position: absolute;
-  background: var(--orange-light);
   width: 8rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
@@ -123,7 +125,7 @@ body {
   transform: translate(-50%, -50%);
 }
 .orbit li > p {
-  background: var(--orange-dark);
+  background: var(--text-bg);
   width: 100%;
   height: 100%;
   display: grid;
