--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -51,6 +51,8 @@ body {
     text-align: center;
     line-height: 1;
 
+    animation: orbit 60s linear reverse infinite;
+
     & > * {
       position: absolute;
       top: 50%;
