Also comment out transform in the first child and defect the problem of circle ran out of orbit. It's because it's not in the center of the center-image

--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -80,7 +80,7 @@ body {
   li:nth-child(1) {
     --icon-bg: var(--blue-light);
     --text-bg: var(--blue-dark);
-    transform: translate(15rem, 0rem);
+    //transform: translate(15rem, 0rem);
   }
 
   li:nth-child(2) {
