!!!! grid and place-item: center + absolute position to multiple children is a great solution to place all children into the middle the parent. Now the circle no longer move.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,6 +103,8 @@ body {
   opacity: 0;
 }
 .orbit ul {
+  display: grid;
+  place-items: center;
   width: var(--size);
   height: var(--size);
   background: red;
