--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,7 @@ body {
   display: grid;
   min-height: 100vh;
   place-content: center;
+  overflow: hidden;
 }
 
 .orbit {
@@ -126,7 +127,6 @@ body {
   color: var(--white-light);
   text-align: center;
   line-height: 1;
-  animation: orbit 60s linear reverse infinite;
 }
 .orbit li > * {
   position: absolute;
@@ -150,6 +150,7 @@ body {
 .orbit li:nth-child(1) {
   --icon-bg: var(--blue-light);
   --text-bg: var(--blue-dark);
+  transform: translate(15rem, 0rem);
 }
 .orbit li:nth-child(2) {
   --icon-bg: var(--green-light);
