--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -4,6 +4,7 @@ body {
   display: grid;
   min-height: 100vh;
   place-content: center;
+  overflow: hidden;
 }
 
 .orbit {
@@ -56,7 +57,7 @@ body {
     text-align: center;
     line-height: 1;
 
-    animation: orbit 60s linear reverse infinite;
+    //animation: orbit 60s linear reverse infinite;
 
     & > * {
       position: absolute;
@@ -85,7 +86,7 @@ body {
   li:nth-child(1) {
     --icon-bg: var(--blue-light);
     --text-bg: var(--blue-dark);
-    //transform: translate(15rem, 0rem);
+    transform: translate(15rem, 0rem);
   }
 
   li:nth-child(2) {
