--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -75,7 +75,8 @@ body {
       //top: 50%;
       //left: 50%;
       //transform: translate(-50%, -50%);
-      animation: orbit var(--speed) linear reverse infinite;
+      animation: orbit var(--speed) linear reverse infinite,
+        throb 1s ease infinite alternate;
     }
 
     > p {
@@ -147,5 +148,11 @@ body {
 @keyframes hold-position {
   100% {
     rotate: -1turn;
+  }
+}
+
+@keyframes throb {
+  100% {
+    scale: 1.2;
   }
 }
