--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,12 +121,10 @@ body {
 .orbit li {
   --icon-bg: pink;
   --text-bg: blue;
-  background: var(--icon-bg);
   position: absolute;
   width: 8rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
-  overflow: hidden;
   font-weight: 500;
   color: var(--white-light);
   text-align: center;
@@ -137,6 +135,14 @@ body {
 .orbit li > * {
   position: absolute;
   animation: orbit var(--speed) linear reverse infinite, throb 1s ease infinite alternate;
+}
+.orbit li > div {
+  border-radius: inherit;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  background-color: var(--icon-bg);
 }
 .orbit li > p {
   background: var(--text-bg);
@@ -204,7 +210,7 @@ body {
 }
 @keyframes throb {
   100% {
-    scale: 1.2;
+    scale: 1.05;
   }
 }
 
