--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -53,12 +53,11 @@ body {
     --icon-bg: pink;
     --text-bg: blue;
 
-    background: var(--icon-bg);
     position: absolute;
     width: 8rem;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
-    overflow: hidden;
+    //overflow: hidden;
     font-weight: 500;
     color: var(--white-light);
     text-align: center;
@@ -77,6 +76,15 @@ body {
       //transform: translate(-50%, -50%);
       animation: orbit var(--speed) linear reverse infinite,
         throb 1s ease infinite alternate;
+    }
+
+    > div {
+      border-radius: inherit;
+      width: 100%;
+      height: 100%;
+      display: grid;
+      place-items: center;
+      background-color: var(--icon-bg);
     }
 
     > p {
@@ -153,6 +161,6 @@ body {
 
 @keyframes throb {
   100% {
-    scale: 1.2;
+    scale: 1.05;
   }
 }
