!!!! Create a delay into throb and assign different value for :nth-child so each circle will throb at a different time

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,9 +132,33 @@ body {
   display: grid;
   place-items: center;
 }
+.orbit li:nth-child(0) {
+  --throb-delay: 0ms;
+}
+.orbit li:nth-child(1) {
+  --throb-delay: 500ms;
+}
+.orbit li:nth-child(2) {
+  --throb-delay: 1000ms;
+}
+.orbit li:nth-child(3) {
+  --throb-delay: 1500ms;
+}
+.orbit li:nth-child(4) {
+  --throb-delay: 2000ms;
+}
+.orbit li:nth-child(5) {
+  --throb-delay: 2500ms;
+}
+.orbit li:nth-child(6) {
+  --throb-delay: 3000ms;
+}
+.orbit li:nth-child(7) {
+  --throb-delay: 3500ms;
+}
 .orbit li > * {
   position: absolute;
-  animation: orbit var(--speed) linear reverse infinite, throb 1s ease infinite alternate;
+  animation: orbit var(--speed) linear reverse infinite, throb 1s ease-in-out var(--throb-delay, 100ms) infinite alternate;
 }
 .orbit li > div {
   border-radius: inherit;
