--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -68,14 +68,24 @@ body {
 
     //animation: orbit 60s linear reverse infinite;
 
+    @for $i from 0 through 7 {
+      &:nth-child(#{$i}) {
+        --throb-delay: #{500ms * $i};
+      }
+    }
+
     & > * {
       position: absolute;
       // Don't use transform, use grid in the <li> level to center the children
       //top: 50%;
       //left: 50%;
       //transform: translate(-50%, -50%);
+
+      // The animation shorthand CSS property applies an animation between styles. It is a shorthand for
+      // animation-name, animation-duration, animation-timing-function, animation-delay, animation-iteration-count, animation-direction, animation-fill-mode, and animation-play-state.
+      // e.g animation: 3s ease-in 1s infinite reverse both running slidein;
       animation: orbit var(--speed) linear reverse infinite,
-        throb 1s ease infinite alternate;
+        throb 1s ease-in-out var(--throb-delay, 100ms) infinite alternate;
     }
 
     > div {
