--- a/src/sass/base/_orbit.scss
+++ b/src/sass/base/_orbit.scss
@@ -75,12 +75,18 @@ body {
     }
 
     & > * {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      place-items: center;
+      border-radius: inherit;
+
       position: absolute;
       // Don't use transform, use grid in the <li> level to center the children
       //top: 50%;
       //left: 50%;
       //transform: translate(-50%, -50%);
-
+      //
       // The animation shorthand CSS property applies an animation between styles. It is a shorthand for
       // animation-name, animation-duration, animation-timing-function, animation-delay, animation-iteration-count, animation-direction, animation-fill-mode, and animation-play-state.
       // e.g animation: 3s ease-in 1s infinite reverse both running slidein;
@@ -89,20 +95,11 @@ body {
     }
 
     > div {
-      border-radius: inherit;
-      width: 100%;
-      height: 100%;
-      display: grid;
-      place-items: center;
       background-color: var(--icon-bg);
     }
 
     > p {
       background: var(--text-bg);
-      width: 100%;
-      height: 100%;
-      display: grid;
-      place-items: center;
       transition: opacity 500ms;
       opacity: 0;
     }
