Stop the orbit from rotating when hover over <li>

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,6 +132,9 @@ body {
   display: grid;
   place-items: center;
 }
+.orbit li:hover {
+  animation-play-state: paused;
+}
 .orbit li:nth-child(0) {
   --throb-delay: 0ms;
 }
